feat: Cambio para proteger las rutas relacionadascon la participación con el rol de participante y el usuario cambiado a rol de usuario